# early-bird

./: Cargo.toml  build.rs  encrypt.py  run.ps1  syscall.asm
src/: bird.rs  crypt.rs  direct_syscalls.rs  download.rs  indirect_loader.rs  lib.rs  main.rs  sleep.rs  utils.rs
src/indirect_syscalls/: globals.rs  mod.rs  resolver.rs  stubs.rs
